...
    routeObserver.subscribe(this, ModalRoute.of(context)!);
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: Text('Watchlist'), actions: [
        IconButton(
          icon: Icon(Icons.filter_list),
          onPressed: () => openFilter(
            context,
          ),
        ),
...
                          );
                        },
                        itemCount: data.watchlistMovies.length,
                      )
                    : const Center(
                        child: Text(
                          'No data found',
                        ),
                      );
              } else {
                return data.watchlistTvSeries.isNotEmpty
                    ? ListView.builder(
                        itemBuilder: (context, index) {
...
